<resources>
    <string name="app_name">Client</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="serverHost">Server Host</string>
    <string name="serverPort">Server Port</string>
    <string name="username">Username</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>

    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="register">Register</string>
    <string name="login">Login</string>

    <string name="lifeEvents">Life Events</string>
    <string name="family">Family</string>

    <string name="settings">Settings</string>
    <string name="search">Search</string>

    <!--Strings for filters-->
    <string name="lifeStory">Life Story Lines (Show Life Story Lines)</string>
    <string name="familyLines">Family Tree Lines (Show Family Tree Lines)</string>
    <string name="spouseLines">Spouse Lines (Show Spouse Lines)</string>
    <string name="fatherSide">Father\'s Side (Filter By Father\'s Side of Family)</string>
    <string name="motherSide">Mother\'s Side (Filter By Mother\'s Side of Family)</string>
    <string name="maleEvents">Male Events (Filter Events Based On Gender)</string>
    <string name="femaleEvents">Female Events (Filter Events Based On Gender)</string>
    <string name="logout">Log Out</string>

    <string name="defaultInfo">Click on Marker to see event details</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>